# agent-harness-test

./: .coverage  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agent-harness/: DESIGN-v2.md  compliance-analysis.md  improvements.md
.claude/: CLAUDE.md
.claude/config/: project.json
.claude/hooks/: verify-files-exist.py  verify-health.py  verify-tests.py
.claude/progress/: feature-list.json  file_history.json  session-state.json  state.json
scripts/: init.sh
src/: __init__.py
src/cli_todo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/todo_cli/: __init__.py  cli.py  models.py  storage.py  tui.py
src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_models.py  test_storage.py
